<?xml version="1.0"?>
<package>
  <name>subscriber_publisher_demo</name>
  <version>0.0.1</version>
  <description>
    Adapted from "Examples from A Gentle Introduction to ROS"
  </description>
  <maintainer email="jokane@cse.sc.edu">
    Jason O'Kane edited by Riby A. B.
  </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>turtlesim</run_depend>
</package>
